<resources>
    <string name="app_name">MoneyManager</string>
    <string name="this_is_item_sample">Ceci est un exemple d’élément !</string>
    <string name="please_send_us">Please send us some feedback!</string>
    <string name="write_some_feedback">Write some feedback</string>
    <string name="this_action_can_contain_ads">This action may contain advertising</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="There_is_no_email">Aucun client email installé.</string>
    <string name="this_app_needs_permissions_below_to_work_properly">This app needs permissions below to work properly</string>
    <string name="continue_permission">Continue</string>
    <string name="allow_camera_access">Allow access</string>
    <string name="permission">Permission</string>
    <string name="allow_storage_access">Allow storage access</string>
    <string name="oh_we_re_sorry">Oh, We’re sorry...</string>
    <string name="much_appreciated">Much appreciated!</string>
    <string name="your_feedback_is_welcome">Your feedback is welcome.</string>
    <string name="your_support_is_our_biggest_motivation">Your support is our biggest motivation!</string>
    <string name="title_intro_1">Supernatural Discovery Camera</string>
    <string name="content_1">Inside your camera can be a whole other world. Explore it today!</string>
    <string name="title_intro_2">Terrifying Ghost Sounds</string>
    <string name="content_2">Ghostly whispers and unseen footsteps — prepare to be terrified.</string>
    <string name="title_intro_3">Chilling Ghost Stories</string>
    <string name="content_3">Haunted rooms, whispering spirits, and terrors in the dark.</string>
    <string name="title_intro_4">Embrace the Unknown</string>
    <string name="content_4">With the Holy Cross as your compass, the spiritual world opens before you.</string>
    <string name="language">Language</string>
    <string name="close">close</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="version">Version</string>
    <string name="version_app">1.0.0</string>
    <string name="share">Share App</string>
    <string name="policy">Policy</string>
    <string name="annual_category_report">Annual Category Report</string>
    <string name="annual_report">Annual Report</string>
    <string name="sound">Sound</string>
    <string name="currency">Currency</string>
    <string name="converter">Converter</string>
    <string name="may_be_later">May be later</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="setting">Settings</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="budget_planner">BUDGET PLANNER</string>
    <string name="analytics">Analytics</string>
    <string name="loans">Loans</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="available_balance">Available Balance</string>
    <string name="invisible_balance">*******</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_budget">Add Budget</string>

    <string name="error_missing_category">Missing category data!</string>
    <string name="error_empty_note">Please enter a note!</string>
    <string name="error_empty_amount">Please enter an amount!</string>
    <string name="success_transaction_saved">Transaction saved successfully!</string>
    <string name="total_expenses">Total Expenses</string>

    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="this_month">This month</string>
    <string name="this_year">This year</string>
    <string name="total">Total</string>
    <string name="total_income">Total Income</string>
    <string name="money_borrowed">Borrowed</string>
    <string name="base_currency">Base Currency</string>
    <string name="set_your_budget">Set Your Budget</string>
    <string name="please_enter_your_budget">Please enter your budget. The finance manager will help you manage your money.</string>
    <string name="add_your_first_expense_to_get_started">Add your first expense to get started!</string>
    <string name="spent">Spent</string>
    <string name="remaining">Remaining</string>
    <string name="budget_details">Budget Details</string>
    <string name="budget">Budget</string>
    <string name="budget_name">Budget Name</string>

    <string name="average">Average</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="update">update:</string>
    <string name="search">Search</string>
    <string name="daily">Daily transaction</string>
    <string name="please_enter_a_valid_number">Please enter a valid number</string>
    <string name="budget_cannot_exceed_remaining">The sum of all budget items must not exceed the total budget.</string>
    <string name="select_currency">Select Currency</string>
    <string name="please_enter_the_budget_name">Please choose the budget name</string>
    <string name="your_list_is_empty">Your List is Empty</string>
    <string name="looks_like_you">Looks like you haven\'t added anything\nto your Daily Balance list yet</string>

</resources>