<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/photo_feedback" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/main"
        android:text="@string/please_send_us"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext_feedback"
        android:breakStrategy="simple"
        android:ellipsize="end"
        android:cursorVisible="true"
        android:gravity="start"
        android:hint="@string/write_some_feedback"
        android:lines="4"
        android:maxLines="4"
        android:textColor="@color/main"
        android:textColorHint="@color/gray_300"
        android:paddingHorizontal="16dp"
        android:paddingVertical="13dp"
        android:textCursorDrawable="@drawable/cursor_edittext"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/border_item_language"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/main"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/border_item_language_select"
            android:gravity="center"
            android:text="@string/send"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
