<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvBudget"
        android:background="#262450"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bgPie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/bg_piechart"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBgPieChart"
            android:layout_width="272dp"
            android:layout_height="272dp"
            android:padding="12dp"
            android:src="@drawable/bg_circle_piechart"
            app:tint="@android:color/transparent"
            app:layout_constraintStart_toStartOf="@+id/bgPie"
            app:layout_constraintEnd_toEndOf="@+id/bgPie"
            app:layout_constraintBottom_toBottomOf="@+id/bgPie"
            android:layout_marginBottom="38dp"/>

        <com.example.moneymanager.custom_view.CircularProgressView
            android:id="@+id/circleProgress"
            android:layout_width="242dp"
            android:layout_height="242dp"
            app:layout_constraintTop_toTopOf="@+id/imgBgPieChart"
            app:layout_constraintBottom_toBottomOf="@+id/imgBgPieChart"
            app:layout_constraintEnd_toEndOf="@+id/imgBgPieChart"
            app:layout_constraintStart_toStartOf="@+id/imgBgPieChart"/>

        <TextView
            android:id="@+id/tvSpent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_700"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/spent"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/bgPie"/>

        <TextView
            android:id="@+id/btnBudgetDetail"
            android:text="@string/budget_details"
            style="@style/DialogButton"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSpent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/iv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/cubano"
        android:gravity="center"
        android:textSize="22sp"
        android:text="@string/analytics"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_calendar"
        app:layout_constraintTop_toTopOf="@+id/iv1"
        app:layout_constraintBottom_toBottomOf="@+id/iv1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="13dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="35dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_available_balance1"
        app:layout_constraintTop_toBottomOf="@+id/iv1" />
    <TextView
        android:id="@+id/tvNameWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/available_balance"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/opensans_600"
        app:layout_constraintTop_toTopOf="@id/iv2"
        app:layout_constraintStart_toStartOf="@+id/iv2"
        android:layout_marginTop="14dp"
        android:layout_marginStart="18dp"/>

    <TextView
        android:id="@+id/tvBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invisible_balance"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textAlignment="center"
        android:gravity="center"
        android:includeFontPadding="false"
        android:fontFamily="@font/opensans_400"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNameWallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/this_month"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/opensans_600"
        app:layout_constraintTop_toBottomOf="@id/tvBudget"
        app:layout_constraintStart_toStartOf="@+id/tvBudget"
        app:layout_constraintEnd_toEndOf="@+id/tvBudget"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgVisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit1"
        app:layout_constraintTop_toTopOf="@+id/tvNameWallet"
        app:layout_constraintBottom_toBottomOf="@+id/tvNameWallet"
        app:layout_constraintEnd_toEndOf="@+id/iv2"
        android:layout_marginEnd="12dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
