<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="4dp"
    android:gravity="center"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_budget"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:fontFamily="@font/opensans_700"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <LinearLayout
            android:id="@+id/lledt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clBudgetName"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_edt"
                android:layout_marginBottom="8dp"
                >

                <TextView
                    android:id="@+id/tvBudgetName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/budget_name"
                    android:textAlignment="textStart"
                    android:gravity="center"
                    android:paddingEnd="14dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:includeFontPadding="false"
                    android:layout_marginStart="14dp"
                    android:textColor="@color/white"
                    android:textColorHint="#B3FFFFFF"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_dropdown"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/edtBudget"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="0"
                android:paddingEnd="14dp"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="number"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:textColor="@color/white"
                android:textColorHint="#B3FFFFFF"
                android:background="@drawable/bg_edt"
                android:fontFamily="@font/opensans_400"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@+id/lledt">

            <TextView
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                style="@style/DialogButton"
                android:backgroundTint="#56556F"/>

            <TextView
                android:id="@+id/btnSave"
                android:text="@string/save"
                style="@style/DialogButton"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>